tests/baselines/reference/parserArrowFunctionExpression16(target=es3).errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
fileJs.js(1,25): error TS8010: Type annotations can only be used in TypeScript files.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== fileJs.js (1 errors) ====
    true ? false ? (param): string => param : null : null // Not legal JS; "Unexpected token ':'" at last colon
                            ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
==== fileTs.ts (0 errors) ====
    true ? false ? (param): string => param : null : null
    